# driftless

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  llm-model-migrate.yml  llm-model-scan.yml  llm-plan-act.yml  llm-prompt-refine-poll.yml  llm-prompt-refine.yml  migration-regression.yml  publish.yml  refresh-catalog.yml
docs/: RELEASE.md  repair-and-generators.md
scripts/: check_live_eval_metrics.py  release-check.sh  sync-site.sh
site/: docs.html  index.html  runs.html
site/assets/: app.js  landing.css  runs.css  runs.js  sample-run.json  styles.css
src/driftless/: __init__.py  calibrate.py  cli.py  compare.py  configure.py  contract.py  datasource.py  datastate.py  discovery.py  engine.py  errors.py  evaluation.py  generators.py  github.py  harness.py  init_ci.py  judges.py  label_audit.py  lifecycle.py  policy.py  preflight.py  progress.py  report.py  scanner.py  splits.py  templates.py  view.py
src/driftless/data/: model_lifecycle.json
tests/: regression_metrics.py  scenarios.py  test_cli.py  test_compare.py  test_contract.py  test_data_change_gate.py  test_data_change_regression.py  test_datasource.py  test_datastate.py  test_discovery.py  test_endpoint.py  test_engine.py  test_evaluation.py  test_extraction.py  test_fetch_provider_deprecations.py  test_fetch_provider_models.py  test_fetch_provider_pricing.py  test_generators.py  test_github.py  test_grading_loop.py  test_harness.py  test_init_ci.py  test_judge.py  test_judge_loop.py  test_label_audit.py  test_lifecycle.py  test_migration_live.py  test_migration_regression.py  test_plan_act.py  test_plan_triggers.py  test_policy.py  test_poll_act.py  test_preflight.py  test_progress.py  test_refine.py  test_refresh_catalog.py  test_regression_metrics.py  test_repair_prompt.py  test_report.py  test_scanner.py  (+2 more)
tests/fixtures/: live_eval_baseline.json
tests/fixtures/smoke/: driftless.yml  inputs.jsonl  labels.jsonl
tools/: fetch_provider_deprecations.py  fetch_provider_models.py  fetch_provider_pricing.py  refresh_catalog.py
