[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftless"
dynamic = ["version"]
description = "Keep prompts in sync when model or eval data changes — Poetry-style lock regeneration, Dependabot-style PRs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "driftless contributors" }]
keywords = ["llm", "migration", "dependabot", "prompts", "evaluation", "openai", "anthropic", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.2",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.30",
]

[project.urls]
Homepage = "https://github.com/driftless-dev/driftless"
Repository = "https://github.com/driftless-dev/driftless"
Documentation = "https://github.com/driftless-dev/driftless/blob/main/docs/repair-and-generators.md"
Issues = "https://github.com/driftless-dev/driftless/issues"

[project.scripts]
driftless = "driftless.cli:app"

[tool.hatch.version]
path = "src/driftless/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/driftless"]

[tool.hatch.build.targets.wheel.force-include]
"site" = "driftless/site"

[tool.hatch.build.targets.sdist]
include = [
    "src/driftless",
    "site",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "docs/RELEASE.md",
    "docs/repair-and-generators.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
